Updated electron to v2. Minor clean-up

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
     <hr size=1 />
-    <video id="capture" autoplay></video>
+    <div id="error"></div>
+    <video id="capturedStream" autoplay></video>
   </body>
 
   <script>
